# db_faker

./: README.md  config-cajed.json  config-receita-federal.json  config-si.json  config.example.json  config.json  fake_data_generator.py  main.py  mount_fake.py  pyproject.toml  read_config.py  read_env.py
